# last-fm-py

./: .gitignore  main.py  pyproject.toml
api/: client.py  exceptions.py
api/models/: __init__.py  album.py  albumtags.py  artist.py
